src/objects/Related_Data_Asset__c.object
<CustomObject>
    <description>Join object relating RWE Data Assets to RWE Projects.</description>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Studies</relationshipLabel>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipName>RWE_Related_Data_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Asset_TF__c</fullName>
        <label>Unique_Asset_TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Data Asset</label>
    <nameField>
        <displayFormat>RWE-RDA-{000000000}</displayFormat>
        <label>Related Data Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>